force-app/main/default/objects/IDR_Notification_Event__e/IDR_Notification_Event__e.object-meta.xml
<CustomObject>
    <description>IDR Notification Event to publish events when Case status changes to send notifications to customers via SMS and email</description>
    <label>IDR_Notification_Event</label>
    <pluralLabel>IDR_Notification_Events</pluralLabel>
</CustomObject>