force-app/main/default/objects/IDR_Notification_Event__e/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Stores address of the location</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>