force-app/main/default/objects/IDR_Notification_Event__e/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <description>Scheduled date of the appointment.</description>
    <label>Appointment Date</label>
    <length>70</length>
    <type>Text</type>
</CustomField>