force-app/main/default/objects/IDR_Notification_Event__e/fields/Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time__c</fullName>
    <description>Scheduled time of the appointment</description>
    <label>Appointment Time</label>
    <length>70</length>
    <type>Text</type>
</CustomField>