force-app/main/default/objects/IDR_Notification_Event__e/fields/AuthorisedEmail__c.field-meta.xml
<CustomField>
    <fullName>AuthorisedEmail__c</fullName>
    <description>Authorised person Email for complaint</description>
    <label>AuthorisedEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>