force-app/main/default/objects/IDR_Notification_Event__e/fields/AuthorisedFirstName__c.field-meta.xml
<CustomField>
    <fullName>AuthorisedFirstName__c</fullName>
    <defaultValue>&quot;Customer&quot;</defaultValue>
    <description>Authorised First Name</description>
    <label>AuthorisedFirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>