force-app/main/default/objects/IDR_Notification_Event__e/fields/AuthorisedMobile__c.field-meta.xml
<CustomField>
    <fullName>AuthorisedMobile__c</fullName>
    <description>Authorised Mobile number</description>
    <label>AuthorisedMobile</label>
    <length>18</length>
    <type>Text</type>
</CustomField>