force-app/main/default/objects/IDR_Notification_Event__e/fields/CAP_CIS_ID__c.field-meta.xml
<CustomField>
    <fullName>CAP_CIS_ID__c</fullName>
    <description>CAP CIS ID for customer Case</description>
    <label>CAP_CIS_ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>