force-app/main/default/objects/IDR_Notification_Event__e/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <description>ID of the Case record</description>
    <label>Case ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>