force-app/main/default/objects/IDR_Notification_Event__e/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <description>Case Number of the Case</description>
    <label>Case Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>