force-app/main/default/objects/IDR_Notification_Event__e/fields/Case_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Email__c</fullName>
    <description>Case Owner Email Address</description>
    <label>Case Owner Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>