force-app/main/default/objects/IDR_Notification_Event__e/fields/Case_Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_First_Name__c</fullName>
    <description>First Name of the banker</description>
    <label>Case Owner First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>