force-app/main/default/objects/IDR_Notification_Event__e/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>Status of the case</description>
    <label>Case Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>