force-app/main/default/objects/IDR_Notification_Event__e/fields/Case_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_Change_Date__c</fullName>
    <description>Case Status change date to send notification a date whenever the status is chnaged</description>
    <label>Case Status Change Date</label>
    <type>DateTime</type>
</CustomField>