force-app/main/default/objects/IDR_Notification_Event__e/fields/ChannelMessage__c.field-meta.xml
<CustomField>
    <fullName>ChannelMessage__c</fullName>
    <description>Displays different message based on the channel selected</description>
    <label>ChannelMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>