force-app/main/default/objects/IDR_Notification_Event__e/fields/ComplainantEmail__c.field-meta.xml
<CustomField>
    <fullName>ComplainantEmail__c</fullName>
    <description>Customer Email for NON ANZ customer</description>
    <label>Customer Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>