force-app/main/default/objects/IDR_Notification_Event__e/fields/ComplainantFirstName__c.field-meta.xml
<CustomField>
    <fullName>ComplainantFirstName__c</fullName>
    <defaultValue>&quot;Customer&quot;</defaultValue>
    <description>complainant First name for non anz customer</description>
    <label>ComplainantFirstName</label>
    <length>42</length>
    <type>Text</type>
</CustomField>