force-app/main/default/objects/IDR_Notification_Event__e/fields/ComplainantMobile__c.field-meta.xml
<CustomField>
    <fullName>ComplainantMobile__c</fullName>
    <description>Customer Mobile for NON ANZ Customer</description>
    <label>Customer Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>