force-app/main/default/objects/IDR_Notification_Event__e/fields/Customer_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Identifier__c</fullName>
    <description>Customer Identifier with which Customer search was performed</description>
    <label>Customer Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>