force-app/main/default/objects/IDR_Notification_Event__e/fields/EmailFlag__c.field-meta.xml
<CustomField>
    <fullName>EmailFlag__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should Email be sent</description>
    <label>EmailFlag</label>
    <type>Checkbox</type>
</CustomField>