force-app/main/default/objects/IDR_Notification_Event__e/fields/EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplate__c</fullName>
    <description>EmailTemplate ID for Notification Broker</description>
    <label>EmailTemplate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>