force-app/main/default/objects/IDR_Notification_Event__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of the event associated with the payload like Appointment</description>
    <label>Event Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>