force-app/main/default/objects/IDR_Notification_Event__e/fields/Is_Banker_Notification__c.field-meta.xml
<CustomField>
    <fullName>Is_Banker_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To flag the event if it is intended for Banker Notification, like to remind Banker for to be escalated cases.</description>
    <label>Is Banker Notification</label>
    <type>Checkbox</type>
</CustomField>