force-app/main/default/objects/IDR_Notification_Event__e/fields/Line_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager_Email__c</fullName>
    <description>Email Adress of Line Manager of case owner.</description>
    <label>Line Manager Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>