force-app/main/default/objects/IDR_Notification_Event__e/fields/Line_Manager_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager_First_Name__c</fullName>
    <description>First name of line manager of the case owner</description>
    <label>Line Manager First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>