force-app/main/default/objects/IDR_Notification_Event__e/fields/MessageID__c.field-meta.xml
<CustomField>
    <fullName>MessageID__c</fullName>
    <description>MessageId for Notification Broker</description>
    <label>MessageID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>