force-app/main/default/objects/IDR_Notification_Event__e/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Topic in the template</description>
    <label>Request Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>