force-app/main/default/objects/IDR_Notification_Event__e/fields/SMSFlag__c.field-meta.xml
<CustomField>
    <fullName>SMSFlag__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should SMS Needs to be sent</description>
    <label>SMSFlag</label>
    <type>Checkbox</type>
</CustomField>