force-app/main/default/objects/IDR_Notification_Event__e/fields/SMSTemplate__c.field-meta.xml
<CustomField>
    <fullName>SMSTemplate__c</fullName>
    <description>SMSTemplate ID for Notification Broker</description>
    <label>SMSTemplate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>